Migrate code to Java 17 standard and cleanup code